web_app/static/css/main.css
/* Navbar Styling START */
*{
    padding: 0;
    margin: 0;
    text-decoration: none;
    list-style: none;
    box-sizing: border-box;
}

nav {
    background: #0082e6;
    height: 80px;
    width: 100%;
}

label.logo {
    color: white;
    font-size: 35px;
    line-height: 80px;
    padding: 0 100px;
    font-weight: bold;
}

nav ul{
    float: right;
    margin-right: 20px;

}

nav ul li {
    display:inline-block;
    line-height: 80px;
}

nav ul li a {
    color: white;
    font-size: 17px;
    padding: 7px 13px;
    border-radius: 3px;
    text-transform: uppercase;
}

a.active,a:hover {
    background: #1b9bff;
    transition: .5s;

}

.checkbtn {
    font-size: 30px;
    color: white;
    float: right;
    line-height: 80px;
    margin-right: 40px;
    cursor: pointer;
    display: none;
}
#check {
    display: none;
}
@media (max-width: 952px) {
    label.logo {
        font-size: 30px;
        padding-left: 50px;
    }
    nav ul li a {
        font-size: 16px;
    }
}

@media (max-width: 858px) {
    .checkbtn {
        display: block;
    }

    ul {
        position: fixed;
        width: 100%;
        height: 100vh;
        background: #2c3e50;
        top: 80px;
        left: -100%;
        text-align: center;
        transition: all .5s;
    }

    nav ul li {
        display: block;
        margin: 50px 0;
        line-height: 30px;
    }

    nav ul li a {
        font-size: 20px;
    }

    a:hover,a.active {
        background: none;
        color: #0082e6;
    }

    #check:checked ~ ul {
        left: 0;
    }
}

/* Navbar Styling END*/


body {
    margin: 0;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}

table,
td,
th {
     border: 1px solid;
    padding: 20px;
}

th {
    word-wrap:break-word;
    max-width: 150px;
}

table {
    text-align: center;
    padding: 25px;
}

.button {
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin: 4px 2px;
    cursor: pointer;
    border-radius: 12px;
    transition-duration: 0.4s;
}

.button-small {font-size: 10px;} /* Small button */
.button-medium {font-size: 15px;} /* Medium button */
.button-large {font-size: 20px;} /* Large button */

.button-red {background-color: white; color:black;border: 2px solid red} /* Red */
.button-red:hover {
    background-color: red;
    color: white;
}
.button-green {background-color: white; color:black;border: 2px solid green} /* Green */
.button-green:hover {
    background-color: green;
    color: white;
}

.button-grey-blue {background-color: white; color:black;border: 2px solid grey} /* Grey (Blue when hover) */
.button-grey-blue:hover {
    background-color:cornflowerblue;
    color: white;
}

.button-deep-pink {background-color: white; color:black;border: 2px solid deeppink} /* Red */
.button-deep-pink:hover {
    background-color:deeppink;
    color: white;
}

